@@ -175,8 +175,9 @@ public class BlockChain {
             return null;
         //
         // The new block must have an acceptable target difficulty.  The target difficulty
-        // decreases as the work required increases (that is, the SHA-256 has more leading zeros).
-        // Note that the difficulty is recalculated every 2016 blocks and can just by as much as 25%.
+        // decreases as the work required increases (that is, the SHA-256 hash has more leading zeros).
+        // Note that the difficulty is recalculated every 2016 blocks and can adjust by as much as 50%.
+        // So the block target difficulty must be within 25% of the current chain target difficulty.
         //
         BigInteger blockDiff = block.getTargetDifficultyAsInteger();
         BigInteger chainDiff;
@@ -185,7 +186,7 @@ public class BlockChain {
             chainDiff = chainBlock.getTargetDifficultyAsInteger();
         else
             chainDiff = Parameters.blockStore.getTargetDifficulty();
-        if (blockDiff.subtract(chainDiff).abs().compareTo(chainDiff.divide(BigInteger.valueOf(4))) > 0) {
+        if (blockDiff.subtract(chainDiff).abs().compareTo(chainDiff.divide(BigInteger.valueOf(2))) > 0) {
             log.error(String.format("Block target difficulty is greater than chain target difficulty\n  Block %s",
                                     block.getHashAsString()));
             onHold = true;
